Fix the trenslations

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -3,6 +3,7 @@
     "home": "Home",
     "about": "About",
     "medicines": "Medicines",
+    "supplements": "Supplements",
     "prescription": "Prescription",
     "contact": "Contact",
     "callUs": "Call Us",
